adapt CJ to 7.0.0 changes [wip]